--- a/persongalleri.html
+++ b/persongalleri.html
@@ -4,63 +4,100 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Persongalleri</title>
-  </head>
-  <style>
-    main {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-    }
-    article {
-      border: 1px solid orangered;
-      padding: 1em;
-    }
+    <title>Filtrering</title>
 
-    img {
-      aspect-ratio: 1/1;
-      max-width: 50%;
-      object-fit: contain;
-    }
-  </style>
+    <style>
+      main {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-gap: 1em;
+        justify-content: center;
+      }
+
+      article {
+        padding: 0.5em;
+        border: 1px solid orange;
+        border-radius: 1em;
+      }
+
+      img {
+        max-width: 100%;
+        border-radius: 0.5em;
+      }
+
+      .valgt {
+        color: red;
+      }
+
+      nav {
+        margin: 0 auto;
+        text-align: center;
+      }
+    </style>
+  </head>
   <body>
-    <main id="holder"></main>
+    <h1>Persongalleri</h1>
+    <nav>
+      <h1>Alle</h1>
+      <button data-troende="alle" class="valgt">Alle</button>
+      <button data-troende="ja">Troende</button>
+      <button data-troende="nej">Ikke Troende</button>
+      <button data-troende="tvivler">Tvivler</button>
+    </nav>
+    <main></main>
 
     <template>
       <article>
-        <img src="" alt="" class="billede" />
+        <img src="" alt="" class="billedurl" />
         <h2 class="navn"></h2>
-        <p class="hobby"></p>
-        <p class="fødselsdag"></p>
-        <p class="email"></p>
       </article>
     </template>
 
     <script>
       const endpoint = "https://persongalleri-5d3e.restdb.io/rest/persongalleri";
-      const mereData = {
+
+      const mereinfo = {
         headers: {
           "x-apikey": "600fe9211346a1524ff12e31",
         },
       };
 
-      async function hentData() {
-        const response = await fetch(endpoint, mereData);
-        const galleri = await response.json();
-        console.log("GALLERI", galleri);
-        vis(galleri);
+      let personer;
+      let data;
+      let filter = "alle";
+
+      const header = document.querySelector("h1");
+      const filterKnapper = document.querySelectorAll("nav button");
+      filterKnapper.forEach((knap) => knap.addEventListener("click", filtrerPersoner));
+      hentData;
+
+      function filtrerPersoner() {
+        filter = this.dataset.troende;
+        document.querySelector(".valgt").classList.remove("valgt");
+        this.classList.add("valgt");
+        vis(data);
+        header.textContent = this.textContent;
       }
-      function vis(galleri) {
-        const holder = document.querySelector("#holder");
-        const skabelon = document.querySelector("template").content;
-        galleri.forEach((person) => {
-          const klon = skabelon.cloneNode(true);
-          klon.querySelector(".billede").src = "img/" + person.billede;
-          klon.querySelector(".navn").textContent = person.navn;
-          klon.querySelector(".hobby").textContent = person.hobby;
-          klon.querySelector(".fødselsdag").textContent = person.fødselsdag;
-          klon.querySelector(".email").textContent = person.email;
-          holder.appendChild(klon);
+
+      async function hentData() {
+        const respons = await fetch(endpoint, mereinfo);
+        data = await respons.json();
+        vis(data);
+      }
+
+      function vis() {
+        const main = document.querySelector("main");
+        const template = document.querySelector("template").content;
+        main.textContent = "";
+
+        data.forEach((person) => {
+          console.log("Troende", person.troende);
+          if (filter == person.troende || filter == "alle") {
+            const klon = template.cloneNode(true);
+            klon.querySelector(".billedurl").src = "img/" + person.billede;
+            klon.querySelector(".navn").textContent = person.fornavn;
+            main.appendChild(klon);
+          }
         });
       }
       hentData();
